# encoding

./: dune-project  encoding.opam  encoding.opam.template
lib/: bitwuzla_mappings.default.ml  colibri2_mappings.ml  dune  mappings_intf.ml  options.ml  options.mli  z3_mappings.ml
test/: dune  test_bool.ml  test_colibri2.ml  test_f32.ml  test_f32_c2.ml  test_int.ml  test_real.ml  test_solver.ml
