(ocamllex
 (modules lexer))

(menhir
 (modules parser))

(library
 (public_name encoding)
 (name encoding)
 (modules
  ast
  axioms
  batch
  bitVector
  boolOp
  boolean
  bvOp
  eval_numeric
  expression
  floatOp
  floatingPoint
  incremental
  intOp
  integer
  interpret
  interpret_intf
  lexer
  mappings_intf
  model
  num
  op_intf
  optimizer
  parser
  real
  run
  solver_intf
  strOp
  strings
  symbol
  types
  value
  z3_mappings
  colibri2_mappings)
 (libraries
  core
  z3
  colibri2.core
  colibri2.solver
  colibri2.theories.bool
  colibri2.theories.quantifiers
  colibri2.theories.LRA
  colibri2.theories.LRA.stages.stage0
  colibri2.theories.fp
  ocplib-simplex)
 (preprocess
  (pps ppx_jane)))
